|Fix] Little gap in mobile

--- a/src/styles/home_page.scss
+++ b/src/styles/home_page.scss
@@ -4,7 +4,8 @@
     margin: 0;
     height: 100%;
 }
-body {
+html, body {
+  padding: 0;
   margin: 0;
 }
 .language_buttons {
